--- a/res/layout/wp_editor.xml
+++ b/res/layout/wp_editor.xml
@@ -100,7 +100,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Cancel" />
-
+	<Button
+        android:id="@+id/btnDelete"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Delete" />
 	</LinearLayout>
 
     </LinearLayout>
