--- a/res/layout/activity_routes.xml
+++ b/res/layout/activity_routes.xml
@@ -1,5 +1,5 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -68,7 +68,6 @@
                     android:onClick="OnEditRoute"
                     android:padding="0dp"
                     android:text="Edit" />
-
             </LinearLayout>
         </LinearLayout>
 
@@ -178,13 +177,15 @@
 
         <RelativeLayout
             android:id="@+id/djiSurfaceViewLayout"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" >
+            android:layout_width="133dp"
+            android:layout_height="75dp" >
 
             <dji.sdk.widget.DjiGLSurfaceView
                 android:id="@+id/djiSurfaceView"
                 android:layout_width="fill_parent"
-                android:layout_height="75dp" />
+                android:layout_height="fill_parent"
+                android:clickable="true"
+                android:onClick="VideoPreviewOnClick" />
         </RelativeLayout>
 
         <LinearLayout
@@ -192,15 +193,6 @@
             android:layout_height="wrap_content"
             android:gravity="right"
             android:orientation="horizontal" >
-
-            <Button
-                android:id="@+id/errorMsgSize"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:onClick="OnErrorMsgSize"
-                android:padding="0dp"
-                android:text="S"
-                android:textSize="15sp" />
         </LinearLayout>
     </LinearLayout>
 
