--- a/res/layout/activity_routes.xml
+++ b/res/layout/activity_routes.xml
@@ -86,6 +86,7 @@
             </FrameLayout>
 
             <LinearLayout
+                android:id="@+id/routeControl"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_gravity="bottom"
@@ -166,43 +167,30 @@
         </LinearLayout>
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/linearLayout1"
-        android:layout_width="125dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:baselineAligned="false"
-        android:orientation="vertical" >
-
         <RelativeLayout
             android:id="@+id/djiSurfaceViewLayout"
-            android:layout_width="133dp"
-            android:layout_height="75dp" >
+            android:layout_alignParentRight="true"
+        	android:layout_alignParentTop="true"
+        	android:baselineAligned="false"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
 
             <dji.sdk.widget.DjiGLSurfaceView
                 android:id="@+id/djiSurfaceView"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_width="133sp"
+                android:layout_height="75sp"
                 android:clickable="true"
-                android:onClick="VideoPreviewOnClick" />
+                android:onClick="VideoPreviewOnClick"
+                android:padding="0dp" />
         </RelativeLayout>
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="right"
-            android:orientation="horizontal" >
-        </LinearLayout>
-    </LinearLayout>
 
     <RadioGroup
         android:id="@+id/routeType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/linearLayout2"
-        android:layout_marginRight="42dp"
-        android:layout_toLeftOf="@+id/linearLayout1"
+        android:layout_marginRight="140sp"
+        android:layout_alignRight="@+id/linearLayout2"
         android:orientation="horizontal"
         android:paddingRight="8dp" >
 
