--- a/res/layout/activity_routes.xml
+++ b/res/layout/activity_routes.xml
@@ -1,12 +1,11 @@
 <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.my.fly.RoutesActivity" >
+    tools:context="com.my.fly.RoutesActivity" xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
         android:id="@+id/linearLayout2"
@@ -83,6 +82,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_weight="0.15" >
+
             </FrameLayout>
 
             <LinearLayout
@@ -130,6 +130,7 @@
                     android:src="@android:drawable/ic_menu_camera" />
             </LinearLayout>
         </LinearLayout>
+
     </LinearLayout>
 
     <LinearLayout
@@ -155,18 +156,18 @@
                 android:id="@+id/routeView"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:layout_weight="0.15"
+                android:layout_weight="0.25"
                 android:background="@android:color/transparent"
                 android:textColor="#ffffff" />
 
-            <Space
-                android:id="@+id/stubView1"
+            <SeekBar
+                android:id="@+id/seekBar1"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:layout_weight="0.85" />
+                android:background="@android:color/transparent"
+                android:layout_weight="0.75" />
         </LinearLayout>
     </LinearLayout>
-
         <RelativeLayout
             android:id="@+id/djiSurfaceViewLayout"
             android:layout_alignParentRight="true"
