--- a/res/layout/activity_routes.xml
+++ b/res/layout/activity_routes.xml
@@ -236,6 +236,7 @@
                     android:layout_marginTop="80sp"
                     android:background="#1faaaaaa"
                     android:orientation="vertical"
+                    android:clickable="true"
                     android:padding="3sp" >
 
                     <TextView
@@ -288,7 +289,7 @@
                         android:textSize="10sp" />
 
                     <TextView
-                        android:id="@+id/camAnglecaption"
+                        android:id="@+id/camAngleCaption"
                         android:layout_width="wrap_content"
                         android:layout_height="15sp"
                         android:padding="2sp"
@@ -310,6 +311,34 @@
                         android:shadowRadius="2"
                         android:textColor="@android:color/black"
                         android:textSize="10sp" />
+				<Space
+            android:layout_width="fill_parent"
+            android:layout_height="5sp"/>
+                    <LinearLayout
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:orientation="horizontal" >
+
+                        <Button
+                            android:id="@+id/btnCancel"
+                            style="?android:attr/buttonStyleSmall"
+                            android:layout_width="wrap_content"
+                            android:layout_height="20sp"
+                            android:padding="0dp"
+                            android:text="Cancel"
+                            android:textSize="10sp" />
+
+                        <Button
+                            android:id="@+id/btnDelete"
+                            style="?android:attr/buttonStyleSmall"
+                            android:layout_width="wrap_content"
+                            android:layout_height="20sp"
+                            android:padding="0dp"
+                            android:text="Delete"
+                            android:textSize="10sp" />
+                    </LinearLayout>
                 </LinearLayout>
             </RelativeLayout>
 
